Fixed pledge and dress up forms on mobile

--- a/src/app/pages/events/org-event-page/org-event-page.component.scss
+++ b/src/app/pages/events/org-event-page/org-event-page.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../../node_modules/bulma/bulma.sass";
+
 .event {
     &+& {
         margin-top: 3rem;
@@ -16,4 +18,10 @@
     border-radius: 50%;
     max-height: 25rem;
     border: .25rem solid #444;
+}
+
+@media(max-width: $tablet) {
+    .field.is-grouped {
+        flex-wrap: wrap;
+    }
 }
